# Brainfuck_All_In_One

./: .gitignore  Cargo.toml  Makefile  README.md  test.bf
.github/workflows/: rust.yml
brainfuck-analyzer/: Cargo.toml
brainfuck-analyzer/src/: analyzer.rs  lib.rs
brainfuck-dap/: Cargo.toml
brainfuck-dap/src/: dap.rs  main.rs
brainfuck-interpreter/: Cargo.toml
brainfuck-interpreter/benches/: jit_benchmark.rs  jit_benchmark_test_calculation.bf  jit_benchmark_test_output.bf
brainfuck-interpreter/src/: autojit.rs  debug_interpreter.rs  interpreter.rs  jit.rs  lib.rs  lib.rs.bak  main.rs
brainfuck-lsp/: Cargo.toml
brainfuck-lsp/src/: formatter.rs  inlay_hint.rs  main.rs
doc/: VSC extension release.md
src/: main.rs
vscode-brainfuck/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-brainfuck/client/: package-lock.json  package.json
vscode-brainfuck/client/src/: extension.ts
