[package]
name = "brainfuck-dap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.8"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
brainfuck-interpreter = {path = "../brainfuck-interpreter"}
