[package]
name = "brainfuck-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainfuck-analyzer = {path = "../brainfuck-analyzer"}
assembler = {git="https://github.com/CaulyKan/assembler.git", branch="windows"}
libc = "0.2.138"
clap = { version = "4.0.29", features = ["derive"] }
generator = "0.7.3"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "jit_benchmark"
harness = false
